# LangChain

./: .gitignore  pyproject.toml  requirements.txt  text.txt  typesense.ipynb
1-LangChainBasics/: langchainbasics.ipynb  qachatbot.py  tools.ipynb
RAG/: document.ipynb
data/text_files/: content.txt
